--- a/content/post/2019-08-13-yelp-reviews-of-doctor-s-offices-analyzed.Rmd
+++ b/content/post/2019-08-13-yelp-reviews-of-doctor-s-offices-analyzed.Rmd
@@ -24,7 +24,7 @@ reviews <- read_csv("/Users/dan/R/Song Lyrics Project/yelp_training_set_review.c
 ```
 
 
-Yelp has kindly made a few datasets available for free for data analysts. I was particularly interested in running the reviews through sentiment analysis lexicons. I wondered how much the intensity of negative or postive reviews would change in relation to the type of business being reviewed. Medical offices seemed like a good fit to start with. 
+Yelp has kindly made a dataset of reviews available for free for data analysts. I was particularly interested in running the reviews through sentiment analysis lexicons. I wondered how much the intensity of negative or postive reviews would change in relation to the type of business being reviewed. Medical offices seemed like a good fit to start with. 
 
 
 **For example:** Are customers more likely to give a doctor's office a negative or positive review than say a restaurant or a movie theatre? Will reviewers show more nuance with respect to higher-skill jobs?
